--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="flexCont">
                 <h1 class="title"> CONTACT</h1>
                 <div class="container">
-                    <form action="https://formsubmit.co/b4a166bd830ce39f0a8e339dd95396fd" method="POST" />
+                    <form onsubmit="sendEmail(); reset(); return false;">
                         <h3>GET IN TOUCH</h3>
                         <input type="text" id="name" placeholder="Full Name" required>
                         <input type="email" id="email" placeholder="Email" required>
